fixes to advice section and intro image spacing

--- a/public/ng/app/scss/partials/_advice.scss
+++ b/public/ng/app/scss/partials/_advice.scss
@@ -242,7 +242,7 @@
     }
 
     .description {
-      padding-bottom: 45px;
+      padding-bottom: 24px;
       p {
         font-size: 16px;
         padding-left: 20px;
@@ -383,6 +383,14 @@
         display: block;
         padding: 13px 0;
         margin-left: 17px;
+      }
+    }
+
+    .single-wrapper {
+      padding: 20px 17px;
+      p {
+        color: $dark-gray-font;
+        font-weight: normal;
       }
     }
 
